
  Close #835

* Fix a crash in functools.partial inference when the arguments cannot be determined

  Close PyCQA/pylint#3776

* Fix a crash caused by a lookup of a monkey-patched method

  Close PyCQA/pylint#3686

* ``is_generator`` correctly considers `Yield` nodes in `AugAssign` nodes

  This fixes a false positive with the `assignment-from-no-return` pylint check.

  Close PyCQA/pylint#3904


What's New in astroid 2.4.2?
============================
Release Date: 2020-06-08

* `FunctionDef.is_generator` properly handles `yield` nodes in `While` tests

  Close PyCQA/pylint#3519

* Properly construct the arguments of infered property descriptors

  Close PyCQA/pylint#3648


What's New in astroid 2.4.1?
============================
Release Date: 2020-05-05

* Handle the case where the raw builder fails to retrieve the ``__all__`` attribute

  Close #772

* Restructure the AST parsing heuristic to always pick the same module

  Close PyCQA/pylint#3540
  Close #773

* Changed setup.py to work with [distlib](https://pypi.org/project/distlib)

  Close #779

* Do not crash with SyntaxError when parsing namedtuples with invalid label

  Close PyCQA/pylint#3549

* Protect against ``infer_call_result`` failing with `InferenceError` in `Super.getattr()`

  Close PyCQA/pylint#3529


What's New in astroid 2.4.0?
============================
Release Date: 2020-04-27

* Expose a ast_from_string method in AstroidManager, which will accept
  source code as a string and return the corresponding astroid object

  Closes PyCQA/astroid#725

* ``BoundMethod.implicit_parameters`` returns a proper value for ``__new__``

  Close PyCQA/pylint#2335

* Allow slots added dynamically to a class to still be inferred

  Close PyCQA/pylint#2334

* Allow `FunctionDef.getattr` to look into both instance attrs and special attributes

  Close PyCQA/pylint#1078

* Infer qualified ``classmethod`` as a classmethod.

  Close PyCQA/pylint#3417
